--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ HELP.md
 ### VS Code ###
 .vscode/
 /src/main/webapp/WEB-INF/static-jsp-elements/index.html
+/src/main/webapp/WEB-INF/static-jsp-elements/form.html
