--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.web.locale-resolver=fixed
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+
+logging.level.org.hibernate.SQL=debug
+# logging.level.org.hibernate.type.descriptor.sql=trace
